[package]
name = "frost_server"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum-tx-sign = "6.1.3"
ethers = "2.0.14"
frost-secp256k1 = "1.0.0"
hex = "0.4.3"
k256 = "0.13.3"
rand = "0.8.5"
rlp = "0.5.2"
tokio = { version = "1.28.2", features = ["full"] }
eyre = "0.6.8"
serde_json = "1.0.96"

